fixed module alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,8 @@
 }
 
 .module__list__body {
+    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -239,10 +241,11 @@
 }
 
 .home__body {
+    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    width: calc(100% - 300px);
     overflow-x: auto;
     white-space: nowrap;
 }
@@ -257,18 +260,18 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: auto;
     padding: 10px 10px 10px 10px;
     background-color: lightgray;
     border-radius: 0.2rem;
-    max-height: 6rem;
-    min-width: 100%;
+    max-height: 50rem;
+    min-width: 0;
 }
 
 .home__item__head {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    min-width: 0;
 }
 
 .home__item__head__left {
